# qif_converter

./: .coverage  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  pyrightconfig.json  requirements.txt
.devcontainer/: devcontainer.json
qif_converter/: category_match_session.py  excel_row.py  excel_txn_group.py  gui_qif_runner.py  match_excel.py  match_helpers.py  match_session.py  qdx_probe.py  qfx_to_txns.py  qif_loader.py  qif_parsed.py  qif_to_csv.py  qif_txn_view.py  qif_writer.py
quicken_helper/: __init__.py
tests/: memory_filesystem.py  test_category_match_session.py  test_category_normalize.py  test_excel_match.py  test_excel_only_matched.py  test_excel_row_unit.py  test_excel_txn_group.py  test_filters_and_qif_writer.py  test_gui_app.py  test_gui_quif_runner.py  test_match_excel.py  test_match_helpers.py  test_match_session.py  test_match_session_apply_updates_unit.py  test_match_session_multiple_splits.py  test_match_session_unit_methods.py  test_parsed_qif.py  test_qdx_probe.py  test_qfx_to_txn.py  test_qif_item_key.py  test_qif_loader.py  test_qif_loader_new.py  test_qif_loader_non_txn_and_load.py  test_qif_loader_parse_qif.py  test_qif_loader_protocol.py  test_qif_loader_unified.py  test_qif_to_csv.py  test_qif_to_csv_unit.py  test_qif_txn_view.py  test_qif_writer.py  test_qif_writer_extra.py  test_qif_writer_filters.py
tests_old/: test_category_normalize.py  test_excel_match.py  test_filters_and_qif_writer.py  test_gui_app.py  test_gui_quif_runner.py  test_qdx_probe.py  test_qfx_import.py  test_qif_loader.py  test_qif_to_csv.py
(+186 files in other folders)
